3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/log.txt
In file included from /usr/include/c++/11/cassert:44,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp:4:
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp:9:34: error: ‘size_t’ does not name a type
    9 |   assert(a.size() == static_cast<size_t>(n * n));
      |                                  ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp:5:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
    4 | #include <cassert>
  +++ |+#include <cstddef>
    5 | 
In file included from /usr/include/c++/11/cassert:44,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp:4:
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp:10:34: error: ‘size_t’ does not name a type
   10 |   assert(b.size() == static_cast<size_t>(n * n));
      |                                  ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1FI3/3_naive_gemm_omp/budazhapova_ekaterina/naive_gemm_omp.cpp:10:34: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
